--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-color: #ffffff;
     font-family: 'Roboto Slab', serif;
     line-height: 1.5;
+    scroll-behavior: smooth;
 }
 
 header {
